fix(enhancement): fix text overflow and strict size of button group elements

--- a/src/buttons.less
+++ b/src/buttons.less
@@ -151,6 +151,9 @@
 
   .btn {
     flex: 1 0 auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 1%;
     &:first-of-type:not(:last-of-type) {
       border-bottom-right-radius: 0;
       border-top-right-radius: 0;
